# yolo-openai-detector

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  NON_GOALS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
